[package]
name = "regression-test"
version = "0.2.1"
edition = "2024"
authors = ["eva-cosma"]
description = "A Rust library for regression testing"
license = "MIT"
repository = "https://github.com/eva-cosma/regression-test"
readme = "../README.md"
keywords = ["regression", "testing"]
categories = ["development-tools", "development-tools::testing"]
exclude = ["regtest_data/*"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
